--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1635,4 +1635,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_instant_book">InstantBook</string>
+    <string name="title_activity_loaders">loaders</string>
 </resources>
