--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,13 @@
     
     <string name="app_name">InstaBook</string>
     <string name="action_settings">Settings</string>
+    <string-array name="card_t">
+        <item>Card Type</item>
+        <item>VISA</item>
+        <item>Master-Card</item>
+        <item >Amex</item>
+        <item >Discover</item>
+        </string-array>
     <string-array name="class_t">
         <item>Select Class</item>
         <item>FIRST AC (1A)</item>
